[package]
name = "nsrl-filter"
version = "0.1.0"
edition = "2021"
description = "A high-performance tool for filtering file lists against the National Software Reference Library (NSRL) database"
authors = ["NSRL Filter Contributors"]
license = "MIT"
repository = "https://github.com/pmatheus/nsrl-filter"
keywords = ["forensics", "nsrl", "security", "hash", "filter"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
csv = "1.2.2"
indicatif = "0.17.5"
colored = "2.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true